# bookstore

./: .env.example  README.md  conftest.py  pyproject.toml  requirements.txt
books/: models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/models/: __init__.py  models.py
books/tests/: factories.py  test_smoke.py  test_views.py
core/: settings.py  urls.py
orders/: serializers.py  views.py
orders/migrations/: 0001_initial.py
orders/models/: __init__.py  models.py
orders/tests/: factories.py  test_serializers.py  test_views.py
product/: serializers.py  views.py
product/migrations/: 0001_initial.py  0002_category_is_active_alter_category_slug_and_more.py
product/models/: __init__.py  category.py  models.py
product/tests/: factories.py  test_models.py  test_views.py
